redactable/tests/ui/sensitive_display_dual_without_sensitive_rejected.stderr
error[E0277]: `ApiKey` does not implement `RedactableWithMapper`
  --> tests/ui/sensitive_display_dual_without_sensitive_rejected.rs:11:8
   |
11 | struct ApiKey(#[sensitive(redactable::Token)] String);
   |        ^^^^^^ this type cannot be walked for sensitive data
   |
help: the trait `redactable::RedactableWithMapper` is not implemented for `ApiKey`
  --> tests/ui/sensitive_display_dual_without_sensitive_rejected.rs:11:1
   |
11 | struct ApiKey(#[sensitive(redactable::Token)] String);
   | ^^^^^^^^^^^^^
   = note: use `#[derive(Sensitive)]` on the type definition
   = note: or use `#[sensitive(Policy)]` if this is a leaf value like String
   = help: the following other types implement trait `redactable::RedactableWithMapper`:
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0,)
             Arc<T>
             BTreeMap<K, V>
             BTreeSet<T>
           and $N others
note: required by a bound in `dual_requires_sensitive`
  --> tests/ui/sensitive_display_dual_without_sensitive_rejected.rs:9:10
   |
 9 | #[derive(SensitiveDisplay)]
   |          ^^^^^^^^^^^^^^^^ required by this bound in `dual_requires_sensitive`
   = note: this error originates in the derive macro `SensitiveDisplay` (in Nightly builds, run with -Z macro-backtrace for more info)
